--- a/src/app/esgithub/groups/groupe-details/groupe-details.component.html
+++ b/src/app/esgithub/groups/groupe-details/groupe-details.component.html
@@ -2,140 +2,6 @@
   class="flex justify-between h-screen bg-[#212121]"
   *ngIf="userData$ | async as currentUser"
 >
-  <!-- <div class="flex-1 flex flex-col overflow-hidden">
-    <div class="flex flex-col mt-8 w-[90%] relative left-[5%] p-4 h-full">
-      <div
-        class="relative w-full h-[300px] bg-center bg-cover rounded-lg"
-        style="
-          background-image: url('https://s3-alpha-sig.figma.com/img/c01e/cd3b/2eade497c17451ac7a44827ec0397188?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Vg6FMuno6a-CK1vO5qCBe1-Tzr0SrXph6Z8ffRcTwnOaVxeaiIXIQ5SBIHWUsNV4ExIW-xt7VTHU~8x9AElV--8H5xpDZkbdKRcwj8ONZwE-mn~6fSIDjB41C9DeZjvTbYryjeKvMONm94OI2w3FAZbhJ8G-qA5-EJBe4UTYL3OQYpMLLPWeTyPlZnNymb08NVshjOv6hgw-W97RBK8c6AbJBez34FoMJCgfQp4TfeLjGdOELi2KBUcKE4GEVDC8w6fatk292Ruxmrxt7cTvVdI8kE0jF78YHuFLVlVq2oRI-oYA~QDxf2pt3mbUNBvoWG9NJyXpacvkwceLYWh~jw__');
-        "
-      >
-        <div
-          class="absolute inset-0 bg-black bg-opacity-10 backdrop-blur-sm rounded-lg"
-        ></div>
-        <div class="absolute inset-0 flex items-center justify-center rounded-Flg">
-          <h1 class="text-white text-4xl font-bold italic">Programs</h1>
-        </div>
-      </div>
-      <div class="w-full flex flex-row mt-8 h-full overflow-hidden">
-        <div
-          *ngIf="groupDetails$ | async as group"
-          class="w-full md:w-1/3 lg:w-4/12 h-full overflow-hidden"
-        >
-          <div
-            class="relative rounded-lg shadow-lg p-4 bg-[#3B3D5E] bg-opacity-20 backdrop-blur-md flex flex-col items-center"
-          >
-            <img
-              [src]="group.imageUrl ? 'http://' + group.imageUrl : anonymousGroupImage"
-              alt="Group Logo"
-              class="w-24 h-24 object-cover rounded-full"
-            />
-            <div class="p-4 text-center">
-              <h2 class="text-purple-500 text-3xl italic font-bold">{{ group.name }}</h2>
-              <div class="mt-2 text-gray-700">
-                <span class="font-semibold text-white italic">Owner:</span>
-                {{ group.owner | userDisplayName }}
-              </div>
-              <div class="mt-2 flex items-center justify-center">
-                <img
-                  [src]="
-                    group.owner.avatarUrl
-                      ? 'http://' + group.owner.avatarUrl
-                      : anonymousGroupImage
-                  "
-                  class="w-6 h-6 rounded-full mr-2"
-                  alt="Owner Avatar"
-                />
-                <span
-                  class="ml-4 text-sm italic font-bold hover:text-purple-500 cursor-pointer text-gray-600"
-                  >{{ group.owner.userName }}</span
-                >
-              </div>
-              <div class="mt-2 text-gray-600 overflow-auto h-[80px]">
-                <span class="font-semibold text-white italic">Description:</span>
-                {{ group.description }}
-              </div>
-              <div class="text-gray-600">
-                <span class="font-semibold text-white italic">members:</span>
-                {{ group.members.length + 1 }}
-              </div>
-            </div>
-            <div class="w-full mt-4" *ngIf="isGroupOwner">
-              <ul class="text-center space-y-2">
-                <li>
-                  <div
-                    (click)="onViewMembersClick()"
-                    class="text-purple-500 hover:underline cursor-pointer font-bold italic"
-                  >
-                    View Members
-                  </div>
-                </li>
-                <li>
-                  <div
-                    (click)="onChangeVisibilityClick()"
-                    class="text-purple-500 hover:underline cursor-pointer font-bold italic"
-                  >
-                    Edit Visibility
-                  </div>
-                </li>
-                <li>
-                  <div
-                    class="text-red-700 hover:underline cursor-pointer font-bold italic"
-                    (click)="onDeleteGroupClick()"
-                  >
-                    Delete Group
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="w-full" *ngIf="isVisible">
-            <button
-              class="bg-black text-white font-bold py-1 px-4 rounded w-full mt-2"
-              (click)="onPublishProgramClick()"
-            >
-              Publish
-            </button>
-            <button
-              *ngIf="group.visibility === 'private' && !isGroupOwner"
-              class="bg-red-900 text-white font-bold py-1 px-4 rounded w-full mt-2"
-              (click)="onLeaveGroupClick()"
-            >
-              Leave Group
-            </button>
-          </div>
-        </div>
-        <div *ngIf="!isVisible" class="h-full w-9/12 overflow-hidden relative ml-4">
-          <div
-            class="p-4 relative rounded-lg shadow-lg bg-[#3B3D5E] bg-opacity-20 backdrop-blur-md flex flex-col items-center"
-          >
-            <div class="p-2 mb-4 text-white font-bold italic text-xl">
-              <button>this is a private group please join to proceed</button>
-            </div>
-            <div
-              (click)="onJoinGroupClick()"
-              class="text-purple-500 hover:underline cursor-pointer font-bold italic p-2"
-            >
-              Join now
-            </div>
-          </div>
-        </div>
-        <div *ngIf="isVisible" class="h-full w-full overflow-auto relative ml-8">
-          <div class="w-full">
-            <app-program-item-list
-              *ngFor="let program of groupPrograms$ | async"
-              [program]="program"
-              [homePage]="false"
-              [isGroupOwner]="isGroupOwner"
-              (dislikeClickEvent)="dislikeProgram($event)"
-              (removeClickEvent)="deleteProgram($event)"
-              class="mb-4"
-            ></app-program-item-list>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
   <div class="p-8 overflow-auto">
     <app-search-program-input
       class="flex justify-center"
@@ -301,8 +167,5 @@
       </ng-container>
     </div>
   </div>
-  <app-side-profile
-    [currentUser]="currentUser"
-    [currentUserProgramCount]="(userProgramCount$ | async)!"
-  ></app-side-profile>
+  <app-side-profile [currentUser]="currentUser"></app-side-profile>
 </div>
