--- a/src/app/esgithub/profile/user-programs/user-programs.component.html
+++ b/src/app/esgithub/profile/user-programs/user-programs.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let program of programsList$ | async" class="mb-4 w-full">
+<div *ngFor="let program of programsList" class="mb-4 w-full">
   <app-program-item-list
     [program]="program"
     [homePage]="false"
