--- a/src/app/esgithub/profile/followers-list/followers-list.component.html
+++ b/src/app/esgithub/profile/followers-list/followers-list.component.html
@@ -1,13 +1,7 @@
-<div *ngIf="(followersList | async)?.followers as followingsData" class="overflow-hidden">
-  <div
-    class="w-full flex flex-col h-[87vh] bg-[#424244] p-2 border rounded-md overflow-auto mt-4"
-    *ngIf="followingsData.length > 0"
-  >
-    <div
-      *ngFor="let follower of (followersList | async)?.followers"
-      class="h-24 flex flex-row p-4 border border-black shadow-md rounded-md w-full bg-[#6C6C6C] mt-4"
-    >
-      <div class="w-1/6 rounded-full">
+<div *ngIf="followersList.followers as followingsData" class="overflow-hidden">
+  <div class="w-full rounded-md overflow-auto mt-4" *ngIf="followingsData.length > 0">
+    <div *ngFor="let follower of followersList.followers">
+      <!-- <div class="w-1/6 rounded-full">
         <img
           *ngIf="follower.follower.avatarUrl === null"
           src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Circle-icons-profile.svg"
@@ -33,12 +27,15 @@
           <span class="relative p-2 bottom-1.5 italic">Remove</span>
         </button>
       </div>
+    </div> -->
+      <app-follower [follower]="follower" [customBgcolor]="customBgColor"></app-follower>
     </div>
-  </div>
-  <div
-    *ngIf="followingsData.length === 0"
-    class="w-full flex justify-center text-white items-center italic font-bold bg-[#424244] p-2 border rounded-md overflow-auto mt-4"
-  >
-    No followers found
+
+    <div
+      *ngIf="followingsData.length === 0"
+      class="w-full flex justify-center text-white items-center italic font-bold bg-[#424244] p-2 border rounded-md overflow-auto mt-4"
+    >
+      No followers found
+    </div>
   </div>
 </div>
