--- a/src/app/esgithub/side-profile/follower/follower.component.html
+++ b/src/app/esgithub/side-profile/follower/follower.component.html
@@ -1,5 +1,6 @@
 <a
-  class="flex items-center mt-5 mx-4 bg-[#333333] rounded-lg p-3 cursor-pointer"
+  class="flex items-center mt-5 mx-4 rounded-lg p-3 cursor-pointer"
+  [style.background-color]="'#' + customBgcolor"
   [routerLink]="'/profile/' + follower.follower.userId"
 >
   <img
