feat: fix bugss
Co-authored-by: LoicZHU <57401386+LoicZHU@users.noreply.github.com>

--- a/src/app/esgithub/home-page/home-page.component.html
+++ b/src/app/esgithub/home-page/home-page.component.html
@@ -39,6 +39,7 @@
           [currentUser]="currentUser"
           [homePage]="true"
           (removeClickEvent)="deleteProgram($event)"
+          (programHasBeenLiked)="refreshPrograms$.next()"
         >
         </app-program-item-list>
       </div>
