--- a/src/app/esgithub/profile/user-programs/user-programs.component.html
+++ b/src/app/esgithub/profile/user-programs/user-programs.component.html
@@ -3,5 +3,7 @@
     [program]="program"
     [homePage]="false"
     [isProfileOwner]="profileOwner"
+    [currentUser]="currentUser!"
+    (programHasBeenLiked)="userProgramHasBeenLiked.emit()"
   ></app-program-item-list>
 </div>
