--- a/src/app/esgithub/profile/profile.component.html
+++ b/src/app/esgithub/profile/profile.component.html
@@ -69,11 +69,11 @@
 
       <div class="flex flex-col justify-between w-[636px]">
         <div>
-          <h1 class="text-white text-2xl font-bold">
+          <h1 class="text-white text-2xl font-bold mb-3">
             {{ userData.firstName }} {{ userData.lastName }}
           </h1>
 
-          <p class="text-[#6C6C6C] text-xl mr-3">{{ userData.userName }}</p>
+          <p class="text-[#6C6C6C] text-xl mr-3 mb-6">{{ userData.userName }}</p>
 
           <div class="text-white pb-4 h-28 break-words">
             {{ userData.bio }}
@@ -208,7 +208,10 @@
         <app-user-programs
           *ngIf="activatedTabs.has(ProfileTabFragment.PUBLICATIONS)"
           [hidden]="activeTab !== ProfileTabFragment.PUBLICATIONS"
-          [programsList]="(userProgramList$ | async)!"
+          [programsList]="(programList$ | async)!"
+          [currentUser]="(currentUser$ | async)!"
+          (userProgramHasBeenLiked)="shoulRealoadUserPrograms$.next()"
+          [profileOwner]="isItMyProfil$.value"
         ></app-user-programs>
 
         <div *ngIf="userFollowersAndFollowing$ | async as userFollowersAndFollowing">
