feat: new codding page
Co-authored-by: LoicZHU <57401386+LoicZHU@users.noreply.github.com>

--- a/src/app/core/components/side-navbar/side-navbar.component.html
+++ b/src/app/core/components/side-navbar/side-navbar.component.html
@@ -1,6 +1,6 @@
 <section class="flex gap-6 h-full min-h-screen" *ngIf="shouldDisplayNavBar$ | async">
   <div
-    [ngClass]="{ 'w-[330px]': open, 'w-16': !open }"
+    [ngClass]="{ 'w-[330px]': open, 'w-28': !open }"
     class="bg-[#141414] flex flex-col duration-500 text-gray-100"
   >
     <div class="flex py-3 px-4 justify-end">
@@ -60,26 +60,56 @@
         <path d="M115.919 24.7727V21.8182H111.986V24.7727H115.919Z" fill="white" />
       </svg>
     </div>
+    <div *ngIf="!open" class="flex justify-center">
+      <svg
+        width="78"
+        height="56"
+        viewBox="0 0 78 56"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <rect width="78" height="56" rx="4" fill="#141414" />
+        <path
+          d="M4.5 17.5C4.5 8.66344 11.6634 1.5 20.5 1.5H57.5C66.3366 1.5 73.5 8.66344 73.5 17.5V38.5C73.5 47.3366 66.3366 54.5 57.5 54.5H20.5C11.6634 54.5 4.5 47.3366 4.5 38.5V17.5Z"
+          fill="white"
+        />
+        <path
+          d="M14.2753 37.5V18.5909H27.0168V21.8871H18.2732V26.3928H26.3612V29.6889H18.2732V34.2038H27.0537V37.5H14.2753Z"
+          fill="black"
+        />
+        <path
+          d="M40.453 24.0291C40.3792 23.2843 40.0622 22.7057 39.502 22.2933C38.9419 21.8809 38.1817 21.6747 37.2215 21.6747C36.569 21.6747 36.0181 21.767 35.5688 21.9517C35.1195 22.1302 34.7748 22.3795 34.5347 22.6996C34.3008 23.0196 34.1839 23.3828 34.1839 23.7891C34.1716 24.1276 34.2423 24.4231 34.3962 24.6754C34.5563 24.9278 34.7748 25.1463 35.0518 25.331C35.3287 25.5095 35.6488 25.6664 36.012 25.8018C36.3751 25.9311 36.7629 26.0419 37.1753 26.1342L38.8742 26.5405C39.699 26.7251 40.4561 26.9714 41.1455 27.2791C41.8349 27.5869 42.432 27.9654 42.9367 28.4148C43.4414 28.8641 43.8323 29.3935 44.1093 30.0028C44.3924 30.6122 44.5371 31.3108 44.5432 32.0987C44.5371 33.2559 44.2416 34.2592 43.6569 35.1087C43.0783 35.9519 42.2412 36.6075 41.1455 37.0753C40.056 37.5369 38.7419 37.7678 37.203 37.7678C35.6765 37.7678 34.347 37.5339 33.2144 37.0661C32.088 36.5982 31.2078 35.9058 30.5738 34.9886C29.9459 34.0653 29.6166 32.9235 29.5858 31.5632H33.4545C33.4975 32.1972 33.6791 32.7266 33.9992 33.1513C34.3254 33.5698 34.7594 33.8868 35.301 34.1023C35.8489 34.3116 36.4675 34.4162 37.1569 34.4162C37.834 34.4162 38.4218 34.3177 38.9204 34.1207C39.4251 33.9238 39.816 33.6499 40.093 33.299C40.3699 32.9482 40.5084 32.545 40.5084 32.0895C40.5084 31.6648 40.3823 31.3078 40.1299 31.0185C39.8837 30.7292 39.5205 30.483 39.0404 30.2798C38.5664 30.0767 37.9848 29.892 37.2954 29.7259L35.2364 29.2088C33.6422 28.821 32.3834 28.2147 31.4601 27.3899C30.5368 26.5651 30.0783 25.4541 30.0844 24.0568C30.0783 22.9119 30.383 21.9117 30.9985 21.0561C31.6202 20.2005 32.4727 19.5327 33.556 19.0526C34.6394 18.5724 35.8704 18.3324 37.2492 18.3324C38.6526 18.3324 39.8775 18.5724 40.9239 19.0526C41.9765 19.5327 42.7951 20.2005 43.3799 21.0561C43.9646 21.9117 44.2662 22.9027 44.2847 24.0291H40.453Z"
+          fill="black"
+        />
+        <path
+          d="M59.7707 24.7031C59.6414 24.2538 59.4598 23.8568 59.2259 23.5121C58.992 23.1612 58.7058 22.8658 58.3673 22.6257C58.0349 22.3795 57.6533 22.1918 57.2224 22.0625C56.7977 21.9332 56.3268 21.8686 55.8097 21.8686C54.8434 21.8686 53.9939 22.1087 53.2615 22.5888C52.5351 23.0689 51.9688 23.7675 51.5626 24.6847C51.1563 25.5956 50.9532 26.7098 50.9532 28.027C50.9532 29.3442 51.1533 30.4645 51.5534 31.3878C51.9534 32.3111 52.5197 33.0159 53.2522 33.5021C53.9847 33.9822 54.8495 34.2223 55.8467 34.2223C56.7515 34.2223 57.524 34.0623 58.1642 33.7422C58.8105 33.416 59.3029 32.9574 59.6414 32.3665C59.9861 31.7756 60.1585 31.0769 60.1585 30.2706L60.971 30.3906H56.096V27.3807H64.0086V29.7628C64.0086 31.4247 63.6578 32.8527 62.9561 34.0469C62.2543 35.2348 61.288 36.152 60.0569 36.7983C58.8258 37.4384 57.4163 37.7585 55.8282 37.7585C54.0555 37.7585 52.4982 37.3677 51.1563 36.5859C49.8145 35.7981 48.7681 34.6809 48.0171 33.2344C47.2723 31.7817 46.8999 30.0582 46.8999 28.0639C46.8999 26.5312 47.1215 25.1648 47.5647 23.9645C48.0141 22.758 48.6419 21.7363 49.4482 20.8991C50.2546 20.062 51.1933 19.425 52.2643 18.9879C53.3353 18.5509 54.4956 18.3324 55.7451 18.3324C56.8161 18.3324 57.8133 18.4893 58.7366 18.8033C59.6599 19.111 60.4785 19.5481 61.1926 20.1143C61.9127 20.6806 62.5006 21.3546 62.9561 22.1364C63.4115 22.9119 63.7039 23.7675 63.8332 24.7031H59.7707Z"
+          fill="black"
+        />
+      </svg>
+    </div>
     <div class="flex-grow">
       <div
-        class="mt-4 flex flex-col gap-4 relative"
+        class="mt-4 flex flex-col gap-6 relative"
         *ngIf="currentUrl$ | async as currentUrl"
       >
         <a
           *ngFor="let menu of menus; let i = index"
           [routerLink]="menu.link"
-          class="group flex items-center text-lg gap-2 font-light py-2 hover:bg-[#212121] mx-6 cursor-pointer rounded-md"
-          [ngClass]="{ 'bg-[#212121]': currentUrl === menu.link, 'px-6 ': open }"
+          class="group flex items-center mx-6 text-lg gap-2 font-light py-4 px-6 hover:bg-[#212121] cursor-pointer rounded-md"
+          [ngClass]="{
+            'bg-[#212121]': currentUrl === menu.link,
+            'px-6 ': open,
+            'justify-center ': !open
+          }"
         >
           <app-display-icons-navbar
             [iconName]="menu.icon"
             [isCurrentNav]="currentUrl === menu.link"
           ></app-display-icons-navbar>
           <h2
-            [style.transitionDelay]="i + 3 + '00ms'"
             [ngClass]="{
-              'whitespace-pre duration-500 p-1': open,
-              'opacity-0  translate-x-28 overflow-hidden  p-0 m-0 w-0': !open
+              'whitespace-pre': open,
+              hidden: !open
             }"
           >
             {{ menu.name }}
@@ -90,9 +120,13 @@
     <div>
       <a
         (click)="onLogoutClick()"
-        class="group flex items-center px-6 text-lg gap-2 font-light py-2 hover:bg-[#212121] mx-6 mb-28 cursor-pointer rounded-md"
+        [ngClass]="{
+          'flex items-center text-lg gap-2 mx-6  font-light py-4 px-6 hover:bg-[#212121] mb-28 cursor-pointer rounded-md ': true,
+          'justify-center': !open,
+          'px-6 ': open
+        }"
       >
-        <div class="flex items-center justify-center">
+        <div>
           <svg
             width="30"
             height="30"
@@ -110,9 +144,10 @@
           </svg>
         </div>
         <h2
-          [style.transitionDelay]="9 + '00ms'"
-          [ngClass]="{ 'opacity-0 translate-x-28 overflow-hidden': !open }"
-          class="whitespace-pre duration-500 p-1"
+          [ngClass]="{
+            'whitespace-pre ': open,
+            hidden: !open
+          }"
         >
           Log Out
         </h2>
