--- a/src/app/esgithub/home-page/program-item-list/program-user/program-user.component.html
+++ b/src/app/esgithub/home-page/program-item-list/program-user/program-user.component.html
@@ -2,18 +2,18 @@
   [routerLink]="['/profile', userProgram.user.userId]"
   class="py-2 hover:text-purple-500 cursor-pointer flex items-center text-white font-light text-lg z-10"
 >
-  <img
-    class="h-16 w-16 rounded-full mr-6"
+  <div
     [ngClass]="{
       'is-user-connected': isUserConnected,
       'user-not-connected': !isUserConnected
     }"
-    [src]="
+    class="h-16 w-16 rounded-full mr-6 bg-cover bg-no-repeat bg-center"
+    [style.backgroundImage]="
       userProgram.user.avatarUrl
-        ? 'http://' + userProgram.user.avatarUrl
-        : anonymousImageUrl
+        ? 'url(http://' + userProgram.user.avatarUrl + ')'
+        : 'url(' + anonymousImageUrl + ')'
     "
-  />
+  ></div>
 
   {{ userProgram.user.firstName }}
 </a>
