--- a/src/app/esgithub/profile/profile.component.html
+++ b/src/app/esgithub/profile/profile.component.html
@@ -92,7 +92,7 @@
 
             <div>
               <p class="text-white text-2xl font-bold text-center">
-                {{ (userProgramList$ | async)?.length }}
+                {{ (programList$ | async)?.length }}
               </p>
               <p class="text-[#6C6C6C]">Publications</p>
             </div>
