--- a/src/app/esgithub/coding-page/coding-page-langages-selection/coding-page-langages-selection.component.html
+++ b/src/app/esgithub/coding-page/coding-page-langages-selection/coding-page-langages-selection.component.html
@@ -25,7 +25,7 @@
       <button
         (click)="updateLanguage(AvailableLangages.JAVASCRIPT)"
         [ngClass]="{
-          'border rounded-sm': selectedLangage === AvailableLangages.JAVASCRIPT
+          'rounded-sm': selectedLangage === AvailableLangages.JAVASCRIPT
         }"
       >
         <span *ngIf="!(selectedLangage === AvailableLangages.JAVASCRIPT)">
@@ -85,7 +85,7 @@
       </button>
       <button
         (click)="updateLanguage(AvailableLangages.PYTHON)"
-        [ngClass]="{ 'border rounded-sm': selectedLangage === AvailableLangages.PYTHON }"
+        [ngClass]="{ 'rounded-sm': selectedLangage === AvailableLangages.PYTHON }"
       >
         <span *ngIf="selectedLangage === AvailableLangages.PYTHON">
           <svg
@@ -129,7 +129,7 @@
       <button
         (click)="updateLanguage(AvailableLangages.CPLUSPLUS)"
         [ngClass]="{
-          'border rounded-sm': selectedLangage === AvailableLangages.CPLUSPLUS
+          'rounded-sm': selectedLangage === AvailableLangages.CPLUSPLUS
         }"
       >
         <span *ngIf="!(selectedLangage === AvailableLangages.CPLUSPLUS)">
@@ -166,7 +166,7 @@
 
       <button
         (click)="updateLanguage(AvailableLangages.PHP)"
-        [ngClass]="{ 'border rounded-sm': selectedLangage === AvailableLangages.PHP }"
+        [ngClass]="{ 'rounded-sm': selectedLangage === AvailableLangages.PHP }"
       >
         <span *ngIf="!(selectedLangage === AvailableLangages.PHP)">
           <svg
@@ -250,7 +250,7 @@
     <div class="flex flex-col gap-16 justify-center h-screen">
       <button
         [ngClass]="{
-          'border rounded-sm': programLangage === AvailableLangages.JAVASCRIPT
+          'rounded-sm': programLangage === AvailableLangages.JAVASCRIPT
         }"
       >
         <span *ngIf="!(programLangage === AvailableLangages.JAVASCRIPT)">
@@ -310,7 +310,7 @@
       </button>
       <button
         (click)="updateLanguage(AvailableLangages.PYTHON)"
-        [ngClass]="{ 'border rounded-sm': programLangage === AvailableLangages.PYTHON }"
+        [ngClass]="{ 'rounded-sm': programLangage === AvailableLangages.PYTHON }"
       >
         <span *ngIf="programLangage === AvailableLangages.PYTHON">
           <svg
@@ -354,7 +354,7 @@
       <button
         (click)="updateLanguage(AvailableLangages.CPLUSPLUS)"
         [ngClass]="{
-          'border rounded-sm': programLangage === AvailableLangages.CPLUSPLUS
+          'rounded-sm': programLangage === AvailableLangages.CPLUSPLUS
         }"
       >
         <span *ngIf="!(programLangage === AvailableLangages.CPLUSPLUS)">
@@ -391,7 +391,7 @@
 
       <button
         (click)="updateLanguage(AvailableLangages.PHP)"
-        [ngClass]="{ 'border rounded-sm': programLangage === AvailableLangages.PHP }"
+        [ngClass]="{ 'rounded-sm': programLangage === AvailableLangages.PHP }"
       >
         <span *ngIf="!(programLangage === AvailableLangages.PHP)">
           <svg
