--- a/src/app/esgithub/program-edit/program-edit.component.html
+++ b/src/app/esgithub/program-edit/program-edit.component.html
@@ -174,6 +174,13 @@
           <mat-icon>attach_file</mat-icon>
           <span class="relative p-2 bottom-1.5 italic">Select files</span>
         </button>
+        <div *ngFor="let fileInput of selectedInputFiles">
+          <p
+            class="bg-[#6C6C6C] relative py-1 px-1 ml-2 rounded text-[8px] text-[#212121]"
+          >
+            {{ fileInput.name | formatFilename }}
+          </p>
+        </div>
         <button
           (click)="onRunCodeClick()"
           class="relative p-0.5 bg-black text-white font-bold px-4 rounded mr-5"
