--- a/src/app/esgithub/collaboratif-coding/collaborative-coding.component.html
+++ b/src/app/esgithub/collaboratif-coding/collaborative-coding.component.html
@@ -402,6 +402,10 @@
             color="accent"
             *ngIf="isLoading"
           ></mat-progress-bar>
+          <p *ngIf="codeOutput && codeOutput.status !== 0" class="p-4">
+            <span class="text-white">{{ codeOutput.stderr }}</span>
+          </p>
+
           <p *ngIf="codeOutput && codeOutput.status === 0" class="p-4">
             {{ codeOutput.output }}
 
