--- a/src/app/esgithub/edit-user-program/edit-user-program.component.html
+++ b/src/app/esgithub/edit-user-program/edit-user-program.component.html
@@ -487,6 +487,10 @@
             color="accent"
             *ngIf="isLoading"
           ></mat-progress-bar>
+          <p *ngIf="codeOutput && codeOutput.status !== 0" class="p-4">
+            <span class="text-white">{{ codeOutput.stderr }}</span>
+          </p>
+
           <p *ngIf="codeOutput && codeOutput.status === 0" class="p-4">
             <span class="text-white">{{ codeOutput.output }}</span>
 
